<resources>
    <string name="app_name">ChallengedKit(β)</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="monday">M</string>
    <string name="saturday">S</string>
    <string name="friday">F</string>
    <string name="thursday">Th</string>
    <string name="wednesday">W</string>
    <string name="tuesday">T</string>
    <string name="sunday">Su</string>
    <string-array name="month">
        <item>1月</item>
        <item>2月</item>
        <item>3月</item>
        <item>4月</item>
        <item>5月</item>
        <item>6月</item>
        <item>7月</item>
        <item>8月</item>
        <item>9月</item>
        <item>10月</item>
        <item>11月</item>
        <item>12月</item>
    </string-array>
    <string name="ok">OK</string>
    <string name="cancel">キャンセル</string>
    <string name="choose_tag">タグを選択してください</string>
    <string name="edit_name">タイトルを編集</string>
    <string name="choose_tag_display">最初に表示するタグを選択してください</string>
    <string name="slider_max">最大値を設定</string>
    <string name="comment_max_restriction">文字数が多すぎます</string>
    <string name="restriction_multi_tag">タグ名が重複しています</string>
    <string name="restriction_multi_name">アイテム名が重複しています</string>
    <string name="restriction_multi_plot">項目名が重複しています</string>
    <string name="hint_default">タグ名</string>
    <string name="hint_time_eve">項目名</string>
    <string name="title_range_val_title">項目名を編集</string>
    <string-array name="dof">
        <item>日</item>
        <item>月</item>
        <item>火</item>
        <item>水</item>
        <item>木</item>
        <item>金</item>
        <item>土</item>
    </string-array>
    <string name="no_data_txt">データがありません</string>
    <string-array name="dof_en">
        <item>"Sa"</item>
        <item>"S"</item>
        <item>"M"</item>
        <item>"Tu"</item>
        <item>"W"</item>
        <item>"Th"</item>
        <item>"F"</item>
    </string-array>
    <string name="remove_from_group">グループから外す</string>
    <string name="display_fst">最初に表示するタグ</string>
    <string name="non_display_fst">最初に非表示になっているタグ</string>
    <string name="remove_tag_toast">タグを削除しました</string>
    <string name="check_display_first">このタグを最初に表示する</string>
    <string name="template_failure">テンプレートの保存に失敗しました</string>
    <string name="edit_item">項目名を編集</string>
    <string name="add_item">項目を追加</string>
    <string name="default_time_eve_name">新しい項目</string>
    <string name="succeed_adding_tag">タグを追加しました</string>
    <string name="succeed_edit_tag">タグを編集しました</string>
    <string name="dialog_title_add_tag">タグを追加</string>
    <string name="dialog_title_edit_tag">タグを編集</string>
    <string name="succeed_edit_name">アイテム名を編集しました</string>
    <string name="succeed_edit_plot">項目名を編集しました</string>
    <string name="add_widget_dialog_title">パターンを選択してください</string>
    <string name="edit_widget_dialog_title">レイアウトを編集</string>
    <string name="dsc_comment">コメント</string>
    <string name="dsc_tag">タグ</string>
    <string name="dsc_plot">項目</string>
    <string name="license">ライセンス</string>
    <string name="dev_address">hiroyuktamura@gmail.com</string>
    <string name="dev_name">開発者</string>
    <string name="about_vp_title0">設定</string>
    <string name="about_vp_title1">アバウト</string>
    <string name="library">ライブラリ</string>
    <string name="facebook_app_id">123697191641575</string>
    <string name="fb_login_protocol_scheme">fb123697191641575</string>
    <string name="twitter_consumer_key" translatable="false">6mW7nUPpONPFFU0aQJ657xrRT</string>
    <string name="twitter_consumer_secret" translatable="false">f7AEIoKPy3coc80l9wyJe6AED9cQXUtq1sOEyYUjaeirkW64lY</string>
    <string name="exe_logout">ログインしてください</string>
    <string name="key_account_name">name</string>
    <string name="pw_change">pw_change</string>
    <string name="dummy">dummy</string>
    <string name="category0">category0</string>
    <string name="initial">initial</string>
    <string name="dummy_state_pw_much">dummy_state_pw_much</string>
    <string name="pw_change_title">パスワードを変更する</string>
    <string name="input_currentPw">現在のパスワードを入力</string>
    <string name="input_newPw">新しいパスワードを入力</string>
    <string name="input_name">新しいアカウント名</string>
    <string name="input_mail">新しいメールアドレス</string>
    <string name="pw_restriction">6文字以上</string>
    <string name="name_restriction">15文字以内</string>
    <string name="success_pw">パスワードを設定しました</string>
    <string name="success_name">アカウント名を変更しました</string>
    <string name="error">処理に失敗しました</string>
    <string name="title_activity_add_friend_activity">ユーザーを追加</string>
    <string name="non_set">未設定</string>
    <string name="group_name_restriction">15文字以内</string>
    <string name="group_dialog">グループ名を設定</string>
    <string name="dialog_compo0">自分の記録</string>
    <string name="dialog_compo1">他人のデータ</string>
    <string name="dialog_compo2">ファイルをアップロード</string>
    <string name="dialog_compo3">ドキュメントを作成</string>
    <string-array name="add_item_dialog">
        <item>ファイルをアップロード</item>
        <item>ドキュメントを作成</item>
        <item>自分の記録を同期</item>
    </string-array>
    <string-array name="vort_dialog">
        <item>コメントを編集</item>
        <item>urlを共有</item>
        <item>ダウンロード</item>
        <item>削除</item>
    </string-array>
    <string-array name="vort_dialog_doc">
        <item>削除</item>
    </string-array>
    <string name="success_swipe">データを更新しました</string>
    <string name="menu_title_cal">カレンダー</string>
    <string name="dialog_btn_add_group">参加する</string>
    <string name="dialog_btn_reject_invitation">拒否する</string>
    <string name="reject_invitation_toast">招待を拒否しました</string>
    <string name="msg_add_group">グループに参加しました</string>
    <string name="edit_doc_act_name">EditDocActivity</string>
    <string name="edit_title_error">タイトルを入力してください</string>
    <string name="edit_content_error">内容を入力してください</string>
    <string name="edit_hint">内容を入力</string>
    <string name="edit_hint_title">タイトル</string>
    <string name="msgDlSuccess">ダウンロードが完了しました</string>
    <string name="over_size_err">20MBを超えるファイルはアップロードできません</string>
    <string name="updated_comment_msg">コメントを更新しました</string>
    <string name="msg_cancel">キャンセルしました</string>
    <string name="msg_delete_item">アイテムを削除しました</string>
    <string name="msg_sync_data">データを同期しました</string>
    <string name="msg_start_upload">アップロードしています...</string>
    <string name="msg_succeed_upload">アップロードに成功しました</string>
    <string name="msg_succeed_make_doc">ドキュメントを作成しました</string>
    <string name="msg_succeed_download">ダウンロードしています...</string>
    <string name="msg_failed_download">ダウンロードに失敗しました</string>
    <string name="msg_failed_upload">アップロードに失敗しました</string>
    <string name="ntf_channel">通信</string>
    <string name="ntf_channel_description">ファイルのアップロード・ダウンロードなどの通信関係の通知です</string>
    <string name="ntf_channel2">インフォメーション</string>
    <string name="ntf_channel2_description">サーバーの障害情報など、例外的な通知を扱う通知です</string>
    <string name="title_add_group">グループを作成</string>
    <string name="new_group_name">新しいグループ</string>
    <string name="shared_data_activity_label">SharedDataViewActivity</string>
    <string name="shared_calendar_activity_label">SharedCalendarActivity</string>
    <string name="dialog_title">スケジュールを入力</string>
    <string name="remove_schedule_success">スケジュールを削除しました</string>
    <string name="setting_group_activity_lebtl">GroupSettingActivity</string>
    <string name="toolbar_title_setting_group">グループ設定</string>
    <string name="exit_group">グループから退会する</string>
    <string name="exit_group_toast">グループから退会しました</string>
    <string name="updated_group_name">グループ名を変更しました</string>
    <string name="ntf_txt_change_group_img">グループ画像を変更しました</string>
    <string name="setting_toolbar_title">プロフィール設定</string>
    <string name="rv_title">グループメンバー</string>
    <string name="update_success_msg">更新しました</string>
    <string name="update_success_mail">アドレスを変更しました</string>
    <string name="menu_group_title0">記録</string>
    <string name="menu_group_title2">その他</string>
    <string name="item0">記録</string>
    <string name="item1">テンプレート</string>
    <string name="item2">分析</string>
    <string name="item3">共有</string>
    <string name="item4">設定</string>
    <string name="item5">その他</string>
    <string name="addUser">ユーザーを追加</string>
    <string name="social_menu_user">ユーザー</string>
    <string name="social_menu_add_list">グループを追加</string>
    <string name="social_menu_share">グループ</string>
    <string name="social_menu_my_prof">マイプロフィール</string>
    <string name="dialog_board_title">ファイルを選択</string>
    <string name="qr_err_msg">QRコードを取得できませんでした</string>
    <string name="vp_page_name0">QRコード</string>
    <string name="vp_page_name1">ふるふる</string>
    <string name="qr_mine_dsc">あなたのQRコード</string>
    <string name="qr_contents_dsc">QRコード</string>
    <string name="qr_button_value">相手のQRコードを撮影</string>
    <string name="added_friend_btn">ユーザーを追加</string>
    <string name="doc">ドキュメント</string>
    <string name="permission_rational">権限がない場合、アプリの機能が制限されます</string>
    <string name="permission_snb_btn">許可する</string>
    <string name="yesterday">（前日）</string>
    <string name="tomorrow">（翌日）</string>
    <string name="title0">ChallengedKit(β)</string>
    <string name="desc0">ダウンロードありがとうございます。ChallengedKit(β)は、障がい者の方がより働きやすくなるための体調管理・共有アプリです。</string>
    <string name="title1">体調を記録</string>
    <string name="desc1">睡眠時間や服薬の有無など、毎日の体調を記録しましょう。</string>
    <string name="title2">記録を見える化して分析</string>
    <string name="desc2">生活リズムや症状が出るパターンなど、記録を分析することができます。</string>
    <string name="title3">データをシェア</string>
    <string name="desc3">体調の記録のほか、スケジュール、画像や文書を共有できます。配慮事項や診察の日時など、様々なデータを共有しましょう。</string>
    <string name="about_set_val1">ナビゲーションドロワに画像を表示する</string>
    <string name="launcher_icon">ランチャーアイコン</string>
    <string name="illustration">画像</string>
    <string name="about_launcher_credit">designed by Maxim Basinski from Flaticon</string>
    <string name="about_analytics_credit">&lt;a href=&quot;http://www.freepik.com&quot;&gt;Designed by Photoroyalty / Freepik&lt;/a&gt;</string>
    <string name="about_input_credit">&lt;a href=&quot;http://www.freepik.com&quot;&gt;Designed by Freepik&lt;/a&gt;</string>
    <string name="about_meeting_credit">&lt;a href=&quot;http://www.freepik.com&quot;&gt;Designed by Freepik&lt;/a&gt;</string>
    <string name="title5">使い方</string>
    <string name="error_load_img">画像の読み込みに失敗しました</string>
    <string name="about_set_val0">ChallengedKit(β)から退会する</string>
    <string name="timeline_name">イベント</string>
    <string name="tp_check0">前日</string>
    <string name="tp_check1">当日</string>
    <string name="tp_check2">翌日</string>
    <string name="about_set_val0_sub">全ての記録・ユーザを削除し、グループから退会します</string>
    <string name="tos">プライバシーポリシー・免責事項</string>
    <string name="pw">パスワード</string>
    <string name="pw_varidated">••••</string>
    <string name="email">e-mail</string>
    <string name="notice_added">このユーザは既に追加されています</string>
    <string name="tp_range_msg">終了時刻が開始時刻より後になるようにしてください</string>
    <string name="non_user_err">参加できるユーザがいません</string>
    <string name="back">戻る</string>
    <string name="cd_prev_mon">前月へ</string>
    <string name="cd_next_mon">翌月へ</string>
    <string name="cd_menu">メニュー</string>
    <string name="cd_icon">アイコン</string>
    <string name="cd_vert">オプション</string>
    <string name="cd_comment">投稿する</string>
    <string name="cd_remove">削除</string>
    <string name="cd_back_week">前週へ</string>
    <string name="cd_next_week">翌週へ</string>
    <string name="cd_edit">編集</string>
    <string name="cd_add">追加</string>
    <string name="cd_edit_maximum">最大値を変更</string>
    <string name="cd_yellow">yellow</string>
    <string name="cd_check">check</string>
    <string name="cd_orange">orange</string>
    <string name="invite">招待する</string>
</resources>