<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:orientation="horizontal"
        android:foreground="?android:attr/selectableItemBackground"
        android:background="?android:attr/selectableItemBackground"
        android:id="@+id/ll1"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="24dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_exit_to_app_white_24dp"
            android:tint="@color/colorPrimaryDark"
            android:contentDescription=""
            android:clickable="false"
            android:focusable="false"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical"
            android:clickable="false"
            android:focusable="false">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                tools:text="@string/about_set_val0"
                android:textColor="@color/cardview_dark_background"
                android:textSize="16sp"
                android:layout_gravity="center_vertical"
                android:clickable="false"
                android:focusable="false"
                android:id="@+id/title_ll1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:clickable="false"
                android:focusable="false"
                android:text="@string/about_set_val0_sub"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/blue_gray"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="24dp"
            android:layout_gravity="center_vertical"
            android:textSize="14sp"
            android:text="@string/about_set_val1"
            android:textColor="@color/cardview_dark_background"/>

        <android.support.v7.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="24dp"
            android:id="@+id/toggle1"
            android:checked="true"/>

    </LinearLayout>

</LinearLayout>
