<!--
  ~ Copyright (c) $year. Hiroyuki Tamura All rights reserved.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/header"
            layout="@layout/setting_header" />

        <LinearLayout
            android:id="@+id/item_exit"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:padding="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:foreground="?android:attr/selectableItemBackground"
            android:background="?android:attr/selectableItemBackground">

            <FrameLayout
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/circle"
                    android:tint="@color/colorAccent"/>

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/exit_group"
                    android:src="@drawable/ic_exit_to_app_white_24dp" />

            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exit_group"
                android:textColor="@color/cardview_dark_background"
                android:textSize="18sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/blue_gray" />

        <LinearLayout
            android:id="@+id/item_invite"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:padding="16dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:foreground="?android:attr/selectableItemBackground"
            android:background="?android:attr/selectableItemBackground">

            <FrameLayout
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/circle"
                    android:tint="@color/colorAccent"/>

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/exit_group"
                    android:src="@drawable/ic_group_add_white_36dp" />

            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invite"
                android:textColor="@color/cardview_dark_background"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/rv_title"
            android:textColor="@color/cardview_dark_background"
            android:background="@color/blue_gray_light"/>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rv"/>

    </LinearLayout>

</ScrollView>
